# pms-api

./: Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
pms_api/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: entrypoint.sh
